# compact_context

./: .gitignore  README.md  ailang_ir_project_plan.md  pyproject.toml
.agent/: AGENTS.md  BOOTSTRAP.md  CLAUDE.md  FRONTIER.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  SYSTEM_PROMPT.md  TOOLS.md  USER.md
.claude/: settings.local.json
scripts/: benchmark.py  compress_session.py  demo_context_compression.py  verify_comprehensive.py  verify_real_value.py
src/ailang_ir/: __init__.py  __main__.py  mcp_server.py  pipeline.py
src/ailang_ir/decoder/: __init__.py  reconstructor.py
src/ailang_ir/encoder/: __init__.py  codebook.py  concept_table.py
src/ailang_ir/llm/: __init__.py  codec.py  format_spec.py  llm_parser.py  validator.py
src/ailang_ir/memory/: __init__.py  store.py
src/ailang_ir/models/: __init__.py  domain.py
src/ailang_ir/normalize/: __init__.py  vocabulary.py
src/ailang_ir/parser/: __init__.py  rule_parser.py
tests/: test_cli.py  test_concept_table.py  test_decoder.py  test_encoder.py  test_evaluation_fixtures.py  test_llm_format.py  test_llm_parser.py  test_mcp_server.py  test_memory.py  test_memory_intelligence.py  test_models.py  test_normalize.py  test_parser.py  test_pipeline.py
